Try fixing errors